# izzy

./: Cargo.toml
.github/workflows/: rust.linux.yml  rust.mac.yml  rust.win.yml
src/: collection.rs  index.rs  main.rs
