[package]
name = "izzy"
version = "0.1.0"
authors = ["boio"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
lazy_static = "1.4.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]